// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressiveImage should match snapshot for BackgroundImage 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "borderColor": "rgba(61,60,64,0.15)",
        "borderRadius": 5,
        "borderWidth": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://images.com/image.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`ProgressiveImage should match snapshot for Default Image 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "borderColor": "rgba(61,60,64,0.15)",
        "borderRadius": 5,
        "borderWidth": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <ForwardRef(AnimatedComponentWrapper)
    onError={[MockFunction]}
    resizeMethod="auto"
    resizeMode="contain"
    source="https://images.com/image.png"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        null,
      ]
    }
  />
</View>
`;

exports[`ProgressiveImage should match snapshot for Image 1`] = `
<ForwardRef(AnimatedComponentWrapper)
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "borderColor": "rgba(61,60,64,0.15)",
        "borderRadius": 5,
        "borderWidth": 1,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "rgba(61,60,64,NaN)",
      },
    ]
  }
>
  <ForwardRef(AnimatedComponentWrapper)
    onError={[MockFunction]}
    resizeMethod="auto"
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../dist/assets/images/thumb.png",
      }
    }
    style={
      Array [
        undefined,
        Object {
          "opacity": 0.5,
          "tintColor": "#3d3c40",
        },
      ]
    }
  />
  <ForwardRef(AnimatedComponentWrapper)
    onError={[MockFunction]}
    onLoadEnd={[Function]}
    resizeMethod="auto"
    resizeMode="contain"
    source={
      Object {
        "uri": "https://images.com/image.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        Object {
          "opacity": 0,
        },
      ]
    }
  />
</ForwardRef(AnimatedComponentWrapper)>
`;
